<?xml version="1.0"?>
<package>
  <name>raw_message</name>
  <version>0.0.0</version>
  <description>Library for decoding messages from any ROS topic without requiring any prior knowledge of that topic.</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <maintainer email="m.m.bezemer@utwente.nl">Maarten Bezemer</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <license>GPLv2</license>

  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <url type="website">http://www.ce.utwente.nl/ECSSoftware</url>


  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <author email="m.m.bezemer@utwente.nl">Maarten Bezemer</author>


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>topic_tools</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>topic_tools</run_depend>

</package>
